# parlor

./: .env.example  .gitignore  CODE_REVIEW.md  README.md  parse_voices.py
public/: app.js  index.html  styles.css
src/: app.js  index.html  openai_backend.py  pyproject.toml  sentence_splitter.py  server.py  styles.css  test_openai_backend.py  test_sentence_splitter.py  test_tts_config.py  tts.py  tts_prompt.py  voices_catalog.py  voices_data.py
src/benchmarks/: bench.py
