[project]
name = "parlor"
version = "0.1.0"
description = "Real-time multimodal AI — voice + vision conversations with an OpenAI-compatible backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "misaki[en]>=0.9.4; sys_platform == 'darwin'",
    "mlx-audio>=0.4.2; sys_platform == 'darwin'",
    "num2words>=0.5.14; sys_platform == 'darwin'",
    "numpy>=2.4.4",
    "pillow>=11.0.0",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.43.0",
    "websockets>=16.0",
    "python-dotenv>=1.0.0",
    "misaki>=0.9.4",
    "mojimoji>=0.0.13",
    "fugashi[unidic-lite]>=1.5.2",
    "mecab-python3>=1.0.12",
    "pyopenjtalk-plus>=0.4.1.post8",
    "kokoro-onnx[gpu]>=0.5.0",
    "onnxruntime-gpu>=1.27.0",
    "jaconv>=0.5.0",
]
